# factory

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LAYERS.md  LICENSE  README.md  SECOPS-DIRECTIVE.md  agent.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
sdk/: CHANGELOG.md  CONTRIBUTING.md  README.md  demo_telemetry.py  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
sdk/docs/: deployment.md  getting-started.md  runbook.md
sdk/piv_oac/: __init__.py  circuit_breaker.py  exceptions.py  orchestrator.py
sdk/piv_oac/agents/: __init__.py  audit.py  base.py  coherence.py  compliance.py  documentation.py  domain_orchestrator.py  evaluation_agent.py  execution_auditor.py  logistics.py  research_orchestrator.py  security.py  specialist.py  standards.py
sdk/piv_oac/checkpoint/: __init__.py  store.py  validator.py
sdk/piv_oac/cli/: __init__.py  init_cmd.py  main.py  status.py  validate.py
sdk/piv_oac/client/: __init__.py  anthropic_client.py  base.py  ollama_client.py  openai_client.py
sdk/piv_oac/contracts/: __init__.py  parser.py
sdk/piv_oac/dag/: __init__.py  validator.py
sdk/piv_oac/engram/: __init__.py  store.py
sdk/piv_oac/pmia/: __init__.py  bus.py  crypto.py  message.py
sdk/piv_oac/telemetry/: __init__.py  tracer.py
sdk/piv_oac/tools/: __init__.py  executor.py  filter.py
sdk/tests/: conftest.py  test_agents.py  test_checkpoint.py  test_checkpoint_validator.py  test_circuit_breaker.py  test_cli_init.py  test_cli_status.py  test_cli_validate.py  test_client.py  test_contract_parser.py  test_dag.py  test_engram_store.py  test_evaluation_agent.py  test_exceptions.py  test_local_executor.py  test_master_orchestrator.py  test_new_agents.py  test_ollama_client.py  test_openai_client.py  test_pmia.py  test_research_orchestrator.py  test_telemetry.py  test_telemetry_otel.py
(+177 files in other folders)
